--- a/_config.yml
+++ b/_config.yml
@@ -27,11 +27,10 @@ twitter_username: neuralkian
 github_username: kiankyars
 
 # Build settings
-theme: "minimal-mistakes-jekyll"
+theme: minima
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
-  - jekyll-include-cache
 
 # Exclude from processing.
 # The following items will not be processed, by default.
