--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ plugins:
   - jekyll-feed
   - jekyll-seo-tag
 
-permalink: /:year/:month/:day/:title/
+permalink: /blog/:year/:month/:day/:title/
 
 # Exclude from processing.
 # The following items will not be processed, by default.
