--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Kian Kyars
-email: kkyars@ualberta.ca
+email: kiankyars@gmail.com
 description: Kian Kyars's personal blog
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://kiankyars.github.io" # the base hostname & protocol for your site
