--- a/_config.yml
+++ b/_config.yml
@@ -31,6 +31,8 @@ theme: minima
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
+minima:
+  skin: auto
 
 # Exclude from processing.
 # The following items will not be processed, by default.
