--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,10 @@ plugins:
   - jekyll-seo-tag
 minima:
   skin: auto
+  header_pages:
+    - pages/about.md
+    - pages/now.md
+    - pages/projects.md
+    - pages/doomscrolling.md
+    - pages/weekly-victories.md
+    - pages/blog.md
