--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,13 @@ url: "https://kiankyars.github.io"
 twitter_username: neuralkian
 github_username: kiankyars
 
-theme: minima
-plugins:
-  - jekyll-feed
-  - jekyll-seo-tag
-minima:
-  skin: auto
-  header_pages:
-    - pages/about.md
-    - pages/now.md
-    - pages/projects.md
-    - pages/doomscrolling.md
-    - pages/weekly-victories.md
-    - pages/blog.md
+defaults:
+  - scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: default
+  - scope:
+      path: "_posts"
+    values:
+      layout: post
