feat: integrate publications page into minimalist structure

--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ header_pages:
   - awards.md
   - now.md
   - projects.md
+  - publications.md
   - doomscrolling.md
   - weekly-victories.md
   - blog.md
