fix: ensure blog and weekly victory lists render correctly
- Convert blog and weekly-victories to .html to force standard Liquid processing.
- Implement explicit path-based filtering to separate blog posts from victory logs.
- Update index.md with direct links and consistent philosophy quote.
- Synchronize _config.yml with new file extensions.

--- a/_config.yml
+++ b/_config.yml
@@ -7,5 +7,5 @@ header_pages:
   - projects.md
   - publications.md
   - doomscrolling.md
-  - weekly-victories.md
-  - blog.md
+  - weekly-victories.html
+  - blog.html
